# Gringo_Ops

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  Dockerfile  Dockerfile.chatterfix  Dockerfile.dashboard  README.md  agent_config.yaml  cloudbuild.dashboard.yaml  cloudbuild.yaml  dashboard.py  deploy_fix.txt  deploy_live.txt  deploycheck.txt  dev-requirements.txt  dev_patch.sh  dev_setup.sh  firebase.json  firestore.rules  functions.code-workspace  gcp-key.json  gemfix.py  gringo_launcher.py  gringoops_dashboard.py  gui_launcher.py  iam_cleanup.tf  keys_test.py  manage_keys.py  onboard.sh  package-lock.json  package.json  patch_scan_report.json  patch_scan_report.md  project_tree.txt  pyproject.toml  requirements.txt  reset.py  review_agent.py  run_chatterfix_local.py  (+9 more)
.devcontainer/: devcontainer.json
.firebase/: hosting.ZG9jcw.cache  hosting.bWljcm9zaXRl.cache  hosting.cHVibGlj.cache
.streamlit/: config.toml
Agent/: README.md  agent.py  config.py  keychain.py  main.py  memory.json  voice_agent.py
BulletTrain/: dashboard_ui.py  main.py  services.py  ui.py
ChatterFix/: Dockerfile  README.md  cloudbuild.yaml  main.py  test_backend.py
CompletedTasks/: __init__.py  __main__.py  __pip-runner__.py  _compat.py  _dists.py  _distutils.py  _envs.py  _jaraco_text.py  _json.py  _log.py  _sysconfig.py  appdirs.py  auth.py  autocompletion.py  base.py  base_command.py  bazaar.py  build_env.py  build_tracker.py  cache.py  candidate.py  candidates.py  check.py  cmdoptions.py  collector.py  command_context.py  compat.py  compatibility_tags.py  completion.py  config.py  configuration.py  constructors.py  datetime.py  debug.py  deprecation.py  direct_url.py  direct_url_helpers.py  download.py  editable_legacy.py  egg_link.py  (+76 more)
FredFix/: __main__.py  fredfix_ui.py  main.py  registry.py
GeminiReviewTasks/: __init___gemini_review.txt  __main___gemini_review.txt  __pip-runner___gemini_review.txt  _compat_gemini_review.txt  _dists_gemini_review.txt  _distutils_gemini_review.txt  _envs_gemini_review.txt  _jaraco_text_gemini_review.txt  (+111 more)
Gringo_Ops/: .gitignore  Makefile  agent_cli.py  pyproject.toml  requirements.txt  review_agent.py  review_agent.py.bak  run_scaffolder.py
Gringo_Ops/.devcontainer/: devcontainer.json
Gringo_Ops/ChatterFix/: config.py  requirements.txt
Gringo_Ops/FredFix/: fredfix_ui.py  registry.py
Gringo_Ops/FredFix/core/: CreatorAgent.py
Gringo_Ops/LineSmart/: .gcloudignore
Gringo_Ops/lib/: llm_router.py
Gringo_Ops/tools/: code_analyzer.py  code_fixer.py  memory.py  patch_writer.py  patch_writer.py.bak  project_scanner.py  repair_engine.py
(+181 files in other folders)
