[project]
name = "gringoops"
version = "1.0.0"
description = "Unified AI dashboard and agent platform by FredFix"
authors = [
    { name="Fred Taylor", email="fred@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.35,<2.0",
    "openai>=1.30,<2.0",
    "google-cloud-aiplatform>=1.45,<2.0",
    "requests>=2.31,<3.0",
    "watchdog>=4.0,<5.0",
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1,<4.0",
    "huggingface-hub>=0.23,<1.0"
]

[project.optional-dependencies]
gemini = ["google-generativeai"]
cli = ["typer[all]"]

[project.scripts]
gringo-dashboard = "dashboard:main"
fredfix-agent = "FredFix.core.agent:main"

[project.urls]
Homepage = "https://github.com/TheGringo-ai/GringoOps"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"