[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gringoops"
version = "0.1.0"
description = "GringoOps project with various tools, agents, and Streamlit applications."
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "requests",
    "openai",
    "firebase-admin",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "google-auth",
    "python-dotenv",
    "watchdog",
    "openai-whisper",
    "ffmpeg-python",
    "torch",
    "pydub",
    "sounddevice",
    "numpy",
    "scipy",
    "PyMuPDF",
    "python-docx",
    "flask",
    "google-generativeai",
    "huggingface_hub",
    "tiktoken",
    "pdfkit",
]